--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background: #fafafa !important;
+  background: #212225 !important;
   font-family: "Cormorant", serif;
 }
 
